--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -26,5 +26,10 @@
     	<artifactId>Utilities</artifactId>
     	<version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+    	<groupId>org.postgresql</groupId>
+    	<artifactId>postgresql</artifactId>
+    	<version>42.2.5</version>
+</dependency>
   </dependencies>
 </project>
