--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -31,5 +31,15 @@
     	<artifactId>postgresql</artifactId>
     	<version>42.2.5</version>
 </dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.7.25</version>
+</dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>1.7.25</version>
+</dependency>
   </dependencies>
 </project>
